--- a/aboutUs.html
+++ b/aboutUs.html
@@ -14,7 +14,7 @@
 
         <!--Style Sheets-->
         <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css" />
-        <link rel="stylesheet" href="styles/styles.css" />
+        <link rel="stylesheet" href="css/styles.css" />
 
         <title>NuCamp: A Better Way To Camp</title>
     </head>
@@ -24,7 +24,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-4 col-sm-3 col-md-2 align-self-center">
-                        <a href="./index.html"><img src="./img/logo.png" alt="NuCamp Logo" class="img-fluid"></a>
+                        <a href="index.html"><img src="img/logo.png" alt="NuCamp Logo" class="img-fluid"></a>
                     </div>
                     <div class="col">
                         <h1>NuCamp</h1>
@@ -36,14 +36,14 @@
 
         <nav class="navbar navbar-expand-sm navbar-dark sticky-top">
             <div class="container">
-                <a href="./index.html" class="navbar-brand"><img src="./img/logo.png" alt="NuCamp Logo" height="30" width="30"></a>
+                <a href="index.html" class="navbar-brand"><img src="img/logo.png" alt="NuCamp Logo" height="30" width="30"></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nucampNavbar">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="nucampNavbar">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" href="./index.html"><i class="fa fa-home fa-lg"></i> Home</a>
+                            <a class="nav-link" href="index.html"><i class="fa fa-home fa-lg"></i> Home</a>
                         </li>
                         <li class="nav-item active">
                             <a class="nav-link" href="#"><i class="fa fa-info fa-lg"></i> About Us</a>
@@ -52,7 +52,7 @@
                             <a class="nav-link" href="#"><i class="fa fa-list fa-lg"></i> Sites</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./contactUs.html"><i class="fa fa-address-card fa-lg"></i> Contact</a>
+                            <a class="nav-link" href="contactUs.html"><i class="fa fa-address-card fa-lg"></i> Contact</a>
                         </li>
                     </ul>
                 </div>
@@ -165,10 +165,10 @@
                     <div class="col-4 col-sm-2 offset-1">
                         <h5>Links</h5>
                         <ul class="list-unstyled">
-                            <li><a href="./index.html">Home</a></li>
+                            <li><a href="index.html">Home</a></li>
                             <li><a href="#">About</a></li>
                             <li><a href="#">Sites</a></li>
-                            <li><a href="./contactUs.html">Contact</a></li>
+                            <li><a href="contactUs.html">Contact</a></li>
                         </ul>
                     </div>
                     <div class="col-6 col-sm-5 text-center">
