--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
 						<h1>NuCamp</h1>
 						<h2>a better way to camp</h2>
 					</div>
+					<div class="col-md-4 col-xl-2">
+						<button class="btn btn-info btn-lg text-nowrap">Reserve Campsite</button>
+					</div>
 				</div>
 			</div>
 		</header>
@@ -65,8 +68,8 @@
 				</div>
 				<div class="col">
 					<div class="media">
-						<img src="img/breadcrumb-trail-thumb.jpg" alt="Breadcrumb Trail" class="d-flex mr-3 img-thumbnail" />
-						<div class="media">
+						<img class="d-flex mr-3 img-thumbnail" src="img/breadcrumb-trail-thumb.jpg" alt="Breadcrumb Trail" />
+						<div class="media-body align-self-center">
 							<h3>Our Campsites</h3>
 							<p class="d-none d-sm-block">Explore our growing database of curated campsites and leave your own reviews!</p>
 						</div>
@@ -79,8 +82,13 @@
 					<h2>Featured Campsites</h2>
 				</div>
 				<div class="col">
-					<h3>React Lake Campground</h3>
-					<p class="d-none d-sm-block">Nestled in the foothills of the Chrome Mountains, this campground on the shores of the pristine React Lake is a favorite for fly fishers.</p>
+					<div class="media">
+						<div class="media-body align-self-center">
+							<h3>React Lake Campground</h3>
+							<p class="d-none d-sm-block">Nestled in the foothills of the Chrome Mountains, this campground on the shores of the pristine React Lake is a favorite for fly fishers.</p>
+						</div>
+						<img src="img/react-lake-thumb.jpg" alt="React Lake" class="d-flex ml-3 img-thumbnail" />
+					</div>
 				</div>
 			</div>
 
@@ -89,8 +97,50 @@
 					<h2 class="text-sm-right">Our Community Partners</h2>
 				</div>
 				<div class="col">
-					<h3>Bootstrap Outfitters</h3>
-					<p class="d-none d-sm-block">Bootstrap Outfitters supplies you with gear you need at prices you can't beat.</p>
+					<div class="media">
+						<img class="d-flex mr-3 img-thumbnail" src="img/bootstrap-thumb.png" alt="Bootstrap Outfitters" />
+						<div class="media-body align-self-center">
+							<h3>Bootstrap Outfitters</h3>
+							<p class="d-none d-sm-block">Bootstrap Outfitters supplies you with gear you need at prices you can't beat.</p>
+						</div>
+					</div>
+				</div>
+			</div>
+
+			<div class="row row-content">
+				<div class="col-sm-6 mx-auto">
+					<div class="card">
+						<h3 class="card-header bg-info text-white">Reserve a Campsite</h3>
+						<div class="card-body">
+							<form id="reserveForm">
+								<div class="row form-group">
+									<label class="col-sm-6 col-form-label" for="numCampers">Number of Campers</label>
+									<div class="col">
+										<select class="form-control" id="numCampers">
+											<option selected>Select...</option>
+											<option value="1">1</option>
+											<option value="2">2</option>
+											<option value="3">3</option>
+											<option value="4">4</option>
+											<option value="5">5</option>
+											<option value="6">6</option>
+										</select>
+									</div>
+								</div>
+								<div class="row form-group">
+									<label class="col-sm-6 col-form-label" for="date">Date</label>
+									<div class="col">
+										<input class="form-control" type="date" id="date" />
+									</div>
+								</div>
+								<div class="row form-group">
+									<div class="col">
+										<button type="button" class="btn btn-primary">Search</button>
+									</div>
+								</div>
+							</form>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
