added campsite reservation forms and buttons anchor update

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 						<h2>a better way to camp</h2>
 					</div>
 					<div class="col-md-4 col-xl-2">
-						<button class="btn btn-info btn-lg text-nowrap">Reserve Campsite</button>
+						<a class="btn btn-info btn-lg text-nowrap" href="#reserveForm">Reserve Campsite</a>
 					</div>
 				</div>
 			</div>
