--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 						<h2>a better way to camp</h2>
 					</div>
 					<div class="col-md-4 col-xl-2 mt-4">
-						<a class="btn btn-info btn-lg text-nowrap" href="#reserveForm">Reserve Campsite</a>
+						<a class="btn btn-info btn-lg text-nowrap" role="button" href="#reserveForm">Reserve Campsite</a>
 					</div>
 				</div>
 			</div>
@@ -116,7 +116,7 @@
 								<div class="row form-group">
 									<label class="col-sm-6 col-form-label" for="numCampers">Number of Campers</label>
 									<div class="col">
-										<select class="form-control" id="numCampers">
+										<select class="form-control" name="numCampers" id="numCampers">
 											<option selected>Select...</option>
 											<option value="1">1</option>
 											<option value="2">2</option>
@@ -130,12 +130,12 @@
 								<div class="row form-group">
 									<label class="col-sm-6 col-form-label" for="date">Date</label>
 									<div class="col">
-										<input class="form-control" type="date" id="date" />
+										<input class="form-control" placeholder="date" name="date" type="date" id="date" />
 									</div>
 								</div>
 								<div class="row form-group">
 									<div class="col">
-										<button type="button" class="btn btn-primary">Search</button>
+										<button type="submit" class="btn btn-primary">Search</button>
 									</div>
 								</div>
 							</form>
