--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 						<h2>a better way to camp</h2>
 					</div>
 					<div class="col-md-4 col-xl-2 mt-4">
-						<a class="btn btn-info btn-lg text-nowrap" role="button" href="#reserveForm">Reserve Campsite</a>
+						<a class="btn btn-info btn-lg text-nowrap" role="button" href="#reserveForm" data-toggle="tooltip" data-html="true" data-placement="bottom" title="Or call us at <br /> <strong>1-206-555-1234</strong>">Reserve Campsite</a>
 					</div>
 				</div>
 			</div>
@@ -176,5 +176,11 @@
 		<script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
 		<script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
 		<script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+
+		<script>
+			$(function () {
+				$('[data-toggle="tooltip"]').tooltip()
+			})
+		</script>
 	</body>
 </html>
