--- a/index.html
+++ b/index.html
@@ -1,145 +1,245 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
 
-		<!--Bootstrap CSS-->
-		<link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
+<head>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
 
-		<!--Extra fonts-->
-		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster|Open+Sans" />
-		<link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css" />
+	<!--Bootstrap CSS-->
+	<link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
 
-		<!--Style Sheets-->
-		<link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css" />
-		<link rel="stylesheet" href="css/styles.css" />
+	<!--Extra fonts-->
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster|Open+Sans" />
+	<link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css" />
 
-		<title>NuCamp: A Better Way To Camp</title>
-	</head>
+	<!--Style Sheets-->
+	<link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css" />
+	<link rel="stylesheet" href="css/styles.css" />
 
-	<body>
-		<header class="jumbotron jumbotron-fluid">
-			<div class="container">
-				<div class="row">
-					<div class="col-4 col-sm-3 col-md-2 align-self-center">
-						<img src="img/logo.png" alt="NuCamp Logo" class="img-fluid" />
-					</div>
-					<div class="col">
-						<h1>NuCamp</h1>
-						<h2>a better way to camp</h2>
-					</div>
-					<div class="col-md-4 col-xl-2 mt-4">
-						<a class="btn btn-info btn-lg text-nowrap" role="button" href="#reserveForm" data-toggle="tooltip" data-html="true" data-placement="bottom" title="Or call us at <br /> <strong>1-206-555-1234</strong>">Reserve Campsite</a>
-					</div>
-				</div>
-			</div>
-		</header>
+	<title>NuCamp: A Better Way To Camp</title>
+</head>
 
-		<nav class="navbar navbar-expand-sm navbar-dark sticky-top">
-			<div class="container">
-				<a href="#" class="navbar-brand"><img src="img/logo.png" alt="NuCamp Logo" height="30" width="30" /></a>
-				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nucampNavbar">
-					<span class="navbar-toggler-icon"></span>
-				</button>
-				<div class="collapse navbar-collapse" id="nucampNavbar">
-					<ul class="navbar-nav">
-						<li class="nav-item active">
-							<a class="nav-link" href="#"><i class="fa fa-home fa-lg"></i> Home</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="aboutUs.html"><i class="fa fa-info fa-lg"></i> About Us</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="#"><i class="fa fa-list fa-lg"></i> Sites</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="contactUs.html"><i class="fa fa-address-card fa-lg"></i> Contact</a>
-						</li>
-					</ul>
-				</div>
-			</div>
-		</nav>
-
+<body>
+	<header class="jumbotron jumbotron-fluid">
 		<div class="container">
-			<div class="row row-content align-items-center">
-				<div class="col-sm-4 order-sm-last col-md-3">
-					<h2 class="text-sm-right">Discover & Review</h2>
+			<div class="row">
+				<div class="col-4 col-sm-3 col-md-2 align-self-center">
+					<img src="img/logo.png" alt="NuCamp Logo" class="img-fluid" />
 				</div>
 				<div class="col">
-					<div class="media">
-						<img class="d-flex mr-3 img-thumbnail" src="img/breadcrumb-trail-thumb.jpg" alt="Breadcrumb Trail" />
-						<div class="media-body align-self-center">
-							<h3>Our Campsites</h3>
-							<p class="d-none d-sm-block">Explore our growing database of curated campsites and leave your own reviews!</p>
+					<h1>NuCamp</h1>
+					<h2>a better way to camp</h2>
+				</div>
+				<div class="col-md-4 col-xl-2 mt-4">
+					<a class="btn btn-info btn-lg text-nowrap" role="button" data-toggle="modal" data-target="#reserveModal">Reserve Campsite</a>
+				</div>
+			</div>
+		</div>
+	</header>
+
+	<div class="modal fade" id="reserveModal" role="dialog">
+		<div class="modal-dialog modal-lg" role="document">
+			<div class="modal-content">
+				<div class="modal-header bg-info text-white">
+					<h3 class="modal-title">Reserve a Campsite</h3>
+				</div>
+				<div class="modal-body">
+					<form id="reserveForm">
+						<div class="row form-group">
+							<label class="col-sm-6 col-form-label" for="numCampers">Number of Campers</label>
+							<div class="col">
+								<select class="form-control" name="numCampers" id="numCampers">
+									<option selected>Select...</option>
+									<option value="1">1</option>
+									<option value="2">2</option>
+									<option value="3">3</option>
+									<option value="4">4</option>
+									<option value="5">5</option>
+									<option value="6">6</option>
+								</select>
+							</div>
 						</div>
+						<div class="row form-group">
+							<label class="col-sm-6 col-form-label" for="date">Date</label>
+							<div class="col">
+								<input class="form-control" placeholder="date" name="date" type="date" id="date" />
+							</div>
+						</div>
+						<div class="row form-group">
+							<label class="col-sm-6 col-form-label">Campsite Type</label>
+							<div class="col-2 btn-group btn-group-toggle" data-toggle="buttons">
+								<label class="btn btn-success active">
+									<input type="radio" name="siteType" id="siteTent" autocomplete="off"checked>Tent
+								</label>
+								<label class="btn btn-primary">
+									<input type="radio" name="siteType" id="siteRV" autocomplete="off">RV
+								</label>
+							</div>
+						</div>
+						<div class="row form-group">
+							<div class="col">
+								<button type="button" data-dismiss="modal" class="btn btn-secondary">Cancel</button>
+								<button type="submit" class="btn btn-primary">Search</button>
+							</div>
+						</div>
+					</form>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<nav class="navbar navbar-expand-sm navbar-dark sticky-top">
+		<div class="container">
+			<a href="#" class="navbar-brand"><img src="img/logo.png" alt="NuCamp Logo" height="30" width="30" /></a>
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nucampNavbar">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="nucampNavbar">
+				<ul class="navbar-nav">
+					<li class="nav-item active">
+						<a class="nav-link" href="#"><i class="fa fa-home fa-lg"></i> Home</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="aboutUs.html"><i class="fa fa-info fa-lg"></i> About Us</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#"><i class="fa fa-list fa-lg"></i> Sites</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="contactUs.html"><i class="fa fa-address-card fa-lg"></i> Contact</a>
+					</li>
+				</ul>
+				<span class="navbar-text ml-auto">
+					<a role="button" data-toggle="modal" data-target="#loginmodal">
+						<i class="fa fa-sign-in"></i> Login
+					</a>
+				</span>
+			</div>
+		</div>
+	</nav>
+
+	<div class="modal fade" id="loginmodal" role="dialog">
+		<div class="modal-dialog" role="document">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h3 class="modal-title">Login</h3>
+					<button class="close" type="button" data-dismiss="modal">&times;</button>
+				</div>
+				<div class="modal-body">
+					<div class="container-fluid">
+						<form>
+							<div class="form-row">
+								<div class="form-group col-12">
+									<label for="loginEmail" class="sr-only">Email Address</label>
+									<input type="email" class="form-control form-control-sm" id="loginEmail" placeholder="Enter email">
+								</div>
+								<div class="form-group col-12">
+									<label for="loginPassword" class="sr-only">Password</label>
+									<input type="password" class="form-control form-control-sm" id="loginPassword" placeholder="Passwword">
+								</div>
+								<div class="col">
+									<div class="form-check">
+										<input type="checkbox" class="form-check-input">
+										<label class="form-check-label"> Remember Me</label>
+									</div>
+								</div>
+								<div class="form-row">
+									<button type="button" class="btn btn-secondary btn-sm ml-auto" data-dismiss="modal">Cancel</button>
+									<button type="submit" class="btn btn-primary btn-sm ml-1">Sign in</button>
+								</div>
+							</div>
+						</form>
 					</div>
 				</div>
 			</div>
+		</div>
+	</div>
 
-			<div class="row row-content align-items-center">
-				<div class="col-sm-4 col-md-3">
-					<h2>Featured Campsites</h2>
-				</div>
-				<div class="col">
-					<div class="media">
-						<div class="media-body align-self-center">
-							<h3>React Lake Campground</h3>
-							<p class="d-none d-sm-block">Nestled in the foothills of the Chrome Mountains, this campground on the shores of the pristine React Lake is a favorite for fly fishers.</p>
+	<div class="container">
+		<div class="row row-content">
+			<div class="col-md-8 mx-auto">
+				<div id="homeCarousel" class="carousel slide" data-ride="carousel">
+					<ol class="carousel-indicators">
+						<li data-target="#homeCarousel" data-slide-to="0" class="active"></li>
+						<li data-target="#homeCarousel" data-slide-to="1"></li>
+						<li data-target="#homeCarousel" data-slide-to="2"></li>
+					</ol>
+					<div class="carousel-inner">
+						<div class="carousel-item active">
+							<img src="img/breadcrumb-trail.jpg" alt="Breadcrumb Trail Campground" class="d-block w-100">
+							<div class="carousel-caption">
+								<h3>Breadcrumb Trail Campground</h3>
+								<p class="d-none d-sm-block">Let Nucamp be your guide to this off-the-beaten-path, hike-in-only campground.</p>
+							</div>
 						</div>
-						<img src="img/react-lake-thumb.jpg" alt="React Lake" class="d-flex ml-3 img-thumbnail" />
+						<div class="carousel-item">
+							<img src="img/react-lake.jpg" alt="React Lake Campground" class="d-block w-100">
+							<div class="carousel-caption">
+								<h3>React Lake Campground</h3>
+								<p class="d-none d-sm-block">Nestled in the foothills of the Chrome Mountains, this campground on the shores of the pristine React Lake is a favorite for fly fishers.</p>
+							</div>
+						</div>
+						<div class="carousel-item">
+							<img src="img/chrome-river.jpg" alt="Chrome River Campground" class="d-block w-100">
+							<div class="carousel-caption">
+								<h3>Chrome River Campground</h3>
+								<p class="d-none d-sm-block">Spend a few suny days and starry nights beneath a cnaopy of old-growth firs at this enchanting spot by the Chrome River.</p>
+							</div>
+						</div>
+					</div>
+					<a href="#homeCarousel" role="button" data-slide="prev" class="carousel-control-prev">
+						<span class="carousel-control-prev-icon"></span>
+						<span class="sr-only">Previous</span>
+					</a>
+					<a href="#homeCarousel" role="button" data-slide="next" class="carousel-control-next">
+						<span class="carousel-control-next-icon"></span>
+						<span class="sr-only">Nect</span>
+					</a>
+				</div>
+			</div>
+		</div>
+
+
+		<div class="row row-content align-items-center">
+			<div class="col-sm-4 order-sm-last col-md-3">
+				<h2 class="text-sm-right">Discover & Review</h2>
+			</div>
+			<div class="col">
+				<div class="media">
+					<img class="d-flex mr-3 img-thumbnail" src="img/breadcrumb-trail-thumb.jpg" alt="Breadcrumb Trail" />
+					<div class="media-body align-self-center">
+						<h3>Our Campsites</h3>
+						<p class="d-none d-sm-block">Explore our growing database of curated campsites and leave your own reviews!</p>
 					</div>
 				</div>
 			</div>
+		</div>
 
-			<div class="row row-content align-items-center">
-				<div class="col-sm-4 order-sm-last col-md-3">
-					<h2 class="text-sm-right">Our Community Partners</h2>
-				</div>
-				<div class="col">
-					<div class="media">
-						<img class="d-flex mr-3 img-thumbnail" src="img/bootstrap-thumb.png" alt="Bootstrap Outfitters" />
-						<div class="media-body align-self-center">
-							<h3>Bootstrap Outfitters</h3>
-							<p class="d-none d-sm-block">Bootstrap Outfitters supplies you with gear you need at prices you can't beat.</p>
-						</div>
+		<div class="row row-content align-items-center">
+			<div class="col-sm-4 col-md-3">
+				<h2>Featured Campsites</h2>
+			</div>
+			<div class="col">
+				<div class="media">
+					<div class="media-body align-self-center">
+						<h3>React Lake Campground</h3>
+						<p class="d-none d-sm-block">Nestled in the foothills of the Chrome Mountains, this campground on the shores of the pristine React Lake is a favorite for fly fishers.</p>
 					</div>
+					<img src="img/react-lake-thumb.jpg" alt="React Lake" class="d-flex ml-3 img-thumbnail" />
 				</div>
 			</div>
+		</div>
 
-			<div class="row row-content">
-				<div class="col-sm-6 mx-auto">
-					<div class="card">
-						<h3 class="card-header bg-info text-white">Reserve a Campsite</h3>
-						<div class="card-body">
-							<form id="reserveForm">
-								<div class="row form-group">
-									<label class="col-sm-6 col-form-label" for="numCampers">Number of Campers</label>
-									<div class="col">
-										<select class="form-control" name="numCampers" id="numCampers">
-											<option selected>Select...</option>
-											<option value="1">1</option>
-											<option value="2">2</option>
-											<option value="3">3</option>
-											<option value="4">4</option>
-											<option value="5">5</option>
-											<option value="6">6</option>
-										</select>
-									</div>
-								</div>
-								<div class="row form-group">
-									<label class="col-sm-6 col-form-label" for="date">Date</label>
-									<div class="col">
-										<input class="form-control" placeholder="date" name="date" type="date" id="date" />
-									</div>
-								</div>
-								<div class="row form-group">
-									<div class="col">
-										<button type="submit" class="btn btn-primary">Search</button>
-									</div>
-								</div>
-							</form>
-						</div>
+		<div class="row row-content align-items-center">
+			<div class="col-sm-4 order-sm-last col-md-3">
+				<h2 class="text-sm-right">Our Community Partners</h2>
+			</div>
+			<div class="col">
+				<div class="media">
+					<img class="d-flex mr-3 img-thumbnail" src="img/bootstrap-thumb.png" alt="Bootstrap Outfitters" />
+					<div class="media-body align-self-center">
+						<h3>Bootstrap Outfitters</h3>
+						<p class="d-none d-sm-block">Bootstrap Outfitters supplies you with gear you need at prices you can't beat.</p>
 					</div>
 				</div>
 			</div>
@@ -182,5 +282,6 @@
 				$('[data-toggle="tooltip"]').tooltip()
 			})
 		</script>
-	</body>
+</body>
+
 </html>
