--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 			<div class="modal-content">
 				<div class="modal-header bg-info text-white">
 					<h3 class="modal-title">Reserve a Campsite</h3>
+					<button class="close" type="button" data-dismiss="modal">&times;</button>
 				</div>
 				<div class="modal-body">
 					<form id="reserveForm">
@@ -69,10 +70,10 @@
 							<label class="col-sm-6 col-form-label">Campsite Type</label>
 							<div class="col-2 btn-group btn-group-toggle" data-toggle="buttons">
 								<label class="btn btn-success active">
-									<input type="radio" name="siteType" id="siteTent" autocomplete="off"checked>Tent
+									<input type="radio" name="siteType" id="siteTent" value="tent" autocomplete="off" checked>Tent
 								</label>
 								<label class="btn btn-primary">
-									<input type="radio" name="siteType" id="siteRV" autocomplete="off">RV
+									<input type="radio" name="siteType" id="siteRV" value="RV" autocomplete="off">RV
 								</label>
 							</div>
 						</div>
@@ -195,6 +196,14 @@
 						<span class="carousel-control-next-icon"></span>
 						<span class="sr-only">Nect</span>
 					</a>
+					<div id="carouselButton" class="btn-group">
+						<button class="btn btn-danger btn-sm">
+							<i class="fa fa-pause"></i>
+						</button>
+						<button class="btn btn-danger btn-sm">
+							<i class="fa fa-play"></i>
+						</button>
+					</div>
 				</div>
 			</div>
 		</div>
@@ -279,8 +288,14 @@
 
 		<script>
 			$(function () {
-				$('[data-toggle="tooltip"]').tooltip()
-			})
+				$('.carousel').carousel({interval: 2000, pause: 'false'});
+				$('#carouselPause').click(function(){
+					$('.carousel').carousel('pause');
+				});
+				$('#carouselPlay').click(function(){
+					$('.carousel').carousel('cycle');
+				});
+			});
 		</script>
 </body>
 
