--- a/index.html
+++ b/index.html
@@ -196,14 +196,9 @@
 						<span class="carousel-control-next-icon"></span>
 						<span class="sr-only">Nect</span>
 					</a>
-					<div id="carouselButton" class="btn-group">
-						<button class="btn btn-danger btn-sm">
-							<i class="fa fa-pause"></i>
-						</button>
-						<button class="btn btn-danger btn-sm">
-							<i class="fa fa-play"></i>
-						</button>
-					</div>
+					<button class="btn btn-danger btn-sm" id="carouselButton">
+						<i class="fa fa-pause"></i>
+					</button>
 				</div>
 			</div>
 		</div>
@@ -288,12 +283,17 @@
 
 		<script>
 			$(function () {
-				$('.carousel').carousel({interval: 2000, pause: 'false'});
-				$('#carouselPause').click(function(){
-					$('.carousel').carousel('pause');
-				});
-				$('#carouselPlay').click(function(){
-					$('.carousel').carousel('cycle');
+				$('.carousel').carousel({ interval: 2000, pause: 'false' });
+				$('#carouselButton').click(function () {
+					if($('#carouselButton').children('i').hasClass('fa-pause')){
+						$('.carousel').carousel('pause');
+						$('#carouselButton').children('i').removeClass('fa-pause');
+						$('#carouselButton').children('i').addClass('fa-play');
+					} else {
+						$('.carousel').carousel('cycle');
+						$('#carouselButton').children('i').removeClass('fa-play');
+						$('#carouselButton').children('i').addClass('fa-pause');
+					}
 				});
 			});
 		</script>
